# Pao

./: CHANGELOG.md  CONTRIBUTING.md  FOUNDATION.md  LICENSE  PRODUCT_OVERVIEW.md  README.md
.github/workflows/: ai-services.yml  ci.yml  setup-project.yml
docs/00-foundation/: 000-product-constitution.md  010-product-vision.md  020-mission.md  030-core-principles.md  040-product-philosophy.md  050-success-metrics.md  060-glossary.md
docs/01-product/: 100-product-requirement-document.md  110-user-personas.md  120-user-journey.md  130-use-cases.md  140-user-stories.md  150-companion-types.md  160-companion-capabilities.md  170-roadmap.md
docs/02-ai/: 200-ai-architecture.md  210-identity-engine.md  220-conversation-engine.md  230-memory-engine.md  240-relationship-engine.md  250-emotion-engine.md  260-voice-engine.md  270-proactive-engine.md  280-safety-engine.md  290-evaluation-engine.md
docs/03-architecture/: 300-system-architecture.md  310-api-specification.md  320-data-model.md  330-security-model.md  340-infrastructure.md  350-deployment.md
docs/04-engineering/: 400-development-guide.md  410-api-guidelines.md  420-testing-strategy.md  430-observability.md  440-security.md  450-release-process.md  460-implementation-plan.md
docs/05-business/: 500-business-model.md  510-go-to-market.md  520-pricing-packaging.md  530-metrics-analytics.md  540-partnerships.md  550-investor-relations.md
docs/06-legal/: 600-privacy-policy.md  610-terms-of-service.md  620-data-processing-agreement.md  630-compliance-matrix.md
docs/07-adr/: 001-microservices-vs-modular-monolith.md  002-api-protocol.md  003-event-driven-architecture.md  004-database-per-module.md  005-security-model.md  006-service-mesh.md
docs/08-rfc/: 001-rhi-metric-definition.md  002-memory-architecture.md  003-proactive-engine-design.md  004-evaluation-framework.md
engineering/: README.md
engineering/ai/: pyproject.toml
engineering/ai/services/embedding_service/: Dockerfile  main.py
engineering/ai/services/inference_gateway/: Dockerfile  main.py
engineering/ai/services/rag_pipeline/: Dockerfile  main.py
engineering/ai/shared/: pyproject.toml
engineering/ai/shared/src/pao_shared/: __init__.py  config.py  models.py  observability.py
engineering/backend/: package.json  turbo.json
engineering/infrastructure/kubernetes/base/: kustomization.yaml
engineering/infrastructure/terraform/: main.tf  variables.tf
engineering/infrastructure/terraform/modules/cicd/: main.tf  outputs.tf  variables.tf  versions.tf
engineering/infrastructure/terraform/modules/databases/: main.tf  outputs.tf  variables.tf  versions.tf
engineering/infrastructure/terraform/modules/eks/: main.tf  outputs.tf  variables.tf  versions.tf
engineering/infrastructure/terraform/modules/observability/: main.tf  outputs.tf  variables.tf  versions.tf
engineering/infrastructure/terraform/modules/observability/synthetics/: api-health.js  package.json
engineering/infrastructure/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf  versions.tf
engineering/infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf  versions.tf
engineering/mobile/: pubspec.yaml
engineering/mobile/lib/: main.dart
